fixing navbar anim on mobile chrome

--- a/style.css
+++ b/style.css
@@ -153,6 +153,14 @@ a {
 }
 
 /********************************************************** HOME PAGE / INDEX *************************************************************/
+
+#fadey {  
+    width: 100%;
+    height: 100%;
+    position: relative;
+    margin: 0;
+  }
+
 .home-button {
     font-family: "Work Sans";
     border: none;
@@ -161,7 +169,7 @@ a {
     overflow: hidden;
     text-decoration: none;
     color: white;
-    background-color:#333;
+    background-color: #333;
     text-align: center;
     cursor: pointer;
     white-space: nowrap;
@@ -182,10 +190,10 @@ a {
 }
 
 .flex-container {
-    display:grid;
-  }
+    display: grid;
+}
 
-  .home-row {
+.home-row {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -193,15 +201,15 @@ a {
     align-items: top;
     gap: 8px;
     margin-bottom: 8px;
-  }
-  
-  .home-column {
+}
+
+.home-column {
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
     background-color: #fff;
     padding: 6px;
-  }
+}
 
 .home-img-container {
     overflow: hidden;
@@ -215,6 +223,7 @@ a {
 .img1 {
     height: 400px;
 }
+
 .img2 {
     height: 200px;
 }
@@ -227,8 +236,9 @@ a {
 
 @media screen and (min-width: 800px) {
     .home-column {
-      flex: 1
+        flex: 1
     }
+
     .home-row {
         flex: 1
     }
@@ -236,7 +246,7 @@ a {
 
 @media screen and (max-width: 799px) {
     .home-row:nth-child(2) .home-column:nth-child(2) {
-      order: -1
+        order: -1
     }
 }
 
@@ -277,11 +287,13 @@ ul.breadcrumb li+li:before {
 a.breadcrumb-item {
     border-radius: 4px;
 }
+
 a.breadcrumb-item:hover {
     color: black;
     background-color: #DECADE;
     transition: background-color 0.2s;
 }
+
 i.breadcrumb-item {
     color: black;
     font-weight: bold;
@@ -449,11 +461,12 @@ i.breadcrumb-item {
 
 /*collapse on mobile*/
 .sidebar.mobile {
-    transform: translateX(-250px);
+    left: -250px;
+    transform: translateX(0px);
 }
 
 .sidebar.mobile.openMobile {
-    transform: translateX(0px);
+    transform: translateX(250px);
 }
 
 .w3-margin-right {
@@ -794,12 +807,14 @@ button>i {
         width: 33.333%;
     }
 }
+
 /* two column-layout */
 @media screen and (max-width: 1200px) {
     .project {
         width: 50%;
     }
 }
+
 /* single column layout*/
 @media screen and (max-width: 600px) {
     .project {
@@ -810,6 +825,7 @@ button>i {
 /********************************************* DEVICE SPECIFIC LAYOUTS / RESPONSIVE STUFF ********************************************************/
 /* desktop layout*/
 @media (min-width:900px) {
+
     /* hamborgir menu icon enzo */
     .hide-on-large-screens {
         display: none !important;
@@ -822,8 +838,17 @@ button>i {
         column-count: 2;
         column-gap: 4%;
     }
+
     .w3-half {
         width: 50%;
+    }
+
+    .w3-third {
+        width: 33.33333%;
+    }
+
+    .w3-twothird {
+        width: 66.66666%
     }
 }
 
@@ -833,6 +858,7 @@ button>i {
         display: none !important;
         opacity: 0;
     }
+
     /* remove extra margon on main div*/
     .main {
         margin-left: 0 !important;
@@ -840,4 +866,3 @@ button>i {
         padding: 0 !important;
     }
 }
-
